--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,32 @@ header {
     padding: 1em;
 }
 
+section {
+    margin-top: 2em;
+}
+
 .categories {
-    height: 100px;
+    height: auto;
+    display: flex;
+    white-space: nowrap;
+    overflow: auto; 
+}
+
+.card {
+    flex-shrink: 0;
+    margin-right: 1em;
+    color: black;
+    text-align: center;
+}
+
+.card:hover {
+    color: white;
+    background-color: rgb(36, 36, 36);
+}
+
+.playlists {
+    height: auto;
+    display: flex;
+    white-space: nowrap;
+    overflow: auto; 
 }
